# polygon-indexer

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml  package-lock.json
.cargo/: config.toml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2023090801_create_tables/: down.sql  up.sql
src/: config.rs  database.rs  error.rs  indexer.rs  lib.rs  main.rs  models.rs  schema.rs  server.rs  types.rs  utils.rs
ui/: package-lock.json  package.json  vite.config.js
ui/src/: index.html  main.js  styles.css
