[package]
name = "polygon-indexer"
version = "0.1.0"
edition = "2021"
authors = ["Polygon Indexer Team"]
description = "Real-time POL token indexer for Polygon blockchain"

[[bin]]
name = "indexer"
path = "src/main.rs"

[[bin]]
name = "setup_db"
path = "src/bin/setup_db.rs"

[[bin]]
name = "reset_db"
path = "src/bin/reset_db.rs"

[dependencies]
# Web framework and async runtime
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Blockchain interaction
ethers = { version = "2.0", features = ["ws", "rustls"] }

# Database
diesel = { version = "2.1", features = ["sqlite", "r2d2", "chrono", "numeric"] }
diesel_migrations = "2.1"
r2d2 = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
bigdecimal = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment and configuration
dotenvy = "0.15"
clap = { version = "4.0", features = ["derive"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
